tests/paczka1/fuzzy1/21617584.err
Error in line 10: SC2 SC2 65,8
Error in line 24: iQkCRjBr6nA S72 68,54
Error in line 15: SDhiPrg A588 86,1
Error in line 31: jaz S72 83,17
Error in line 25: SDhiPrg A381 38,6
Error in line 34: SDhiPrg S72 10,0
Error in line 9: iQkCRjBr6nA A381 50,4
Error in line 37: iQkCRjBr6nA S72 52,7
